---
sidebar: sidebar
permalink: whats-new.html
keywords: what's new, features, new, release notes, enhancements, fixes
summary: "Learn what's new with the VMware migration advisor component of Workload Factory."
---

= What's new
:icons: font
:imagesdir: ./media/

[.lead]
Learn what's new with the VMware Cloud migration advisor component of Workload Factory.

== 19 September 2024

include::_whatsnew/2024-09-19.adoc[]

== 1 September 2024

include::_whatsnew/2024-09-01.adoc[]

== 7 July 2024

include::_whatsnew/2024-07-07.adoc[]