@@ -27,18 +27,6 @@ sidebar:
           url: /quick-start-native.html
     - title: Use the VMware migration advisor
       entries:
-        - title: Migrate to VMware Cloud on AWS
-          entries:
-          - title: Capture your current VM configurations
-            url: /capture-vm-configurations.html
-          - title: Create a deployment plan using the migration advisor
-            url: /launch-onboarding-advisor.html
-          - title: Deploy the recommended FSx for ONTAP file system
-            url: /deploy-fsx-file-system.html
-          - title: Connect FSx for ONTAP to VMware Cloud on AWS
-            url: /connect-sddc-to-fsx.html
-          - title: Migrate your data to the new infrastructure
-            url: /migrate-data.html
         - title: Migrate to Amazon EC2
           entries:
           - title: Capture your current VM configurations
@@ -51,6 +39,18 @@ sidebar:
 #            url: /connect-sddc-to-fsx.html
           - title: Migrate your data to the new infrastructure
             url: /migrate-data-native.html
+        - title: Migrate to VMware Cloud on AWS
+          entries:
+          - title: Capture your current VM configurations
+            url: /capture-vm-configurations.html
+          - title: Create a deployment plan using the migration advisor
+            url: /launch-onboarding-advisor.html
+          - title: Deploy the recommended FSx for ONTAP file system
+            url: /deploy-fsx-file-system.html
+          - title: Connect FSx for ONTAP to VMware Cloud on AWS
+            url: /connect-sddc-to-fsx.html
+          - title: Migrate your data to the new infrastructure
+            url: /migrate-data.html
     - title: Knowledge and support
       entries:
         - title: Register for support
