@@ -12,6 +12,10 @@ summary: "Learn what's new with the VMware migration advisor component of Worklo
 [.lead]
 Learn what's new with the VMware Cloud migration advisor component of Workload Factory.
 
+== 3 November 2024
+
+include::_whatsnew/2024-11-03.adoc[]
+
 == 19 September 2024
 
 include::_whatsnew/2024-09-19.adoc[]
